--- a/assets/sass/shortcodes.sass
+++ b/assets/sass/shortcodes.sass
@@ -1,8 +1,8 @@
 .article-aside
 	display: grid
 	grid-template-columns: ($units * 18.75) 2fr ($units * 4) 1fr ($units * 18.75)
-	grid-template-rows: 1fr
-	grid-template-areas: '. article . aside .'
+	grid-template-rows: ($units * 4) auto ($units * 4)
+	grid-template-areas: '. . . . .' '. article . aside .' '. . . . .'
 
 	article
 		grid-area: article
